--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>I'm Saahil <span>Sharma</span></h1>
             <h4>Incoming Software Engineer @ <span>HSBC Technology</span></h4>
             <p>To obtain a challenging and rewarding Software
-                Engineer position(cowgirl) where a degree <br> in computer
+                Engineer position where a degree <br> in computer
                 engineering and an Internship as a programmer will
                 be fully utilized. <br> I have a good ability to clearly
                 communicate complex and technical information. I <br>
