--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div class="hero">
         <nav>
             <img src="images/logo.png" class="logo">
+            <a href="" class="topbar">About</a>
+            <a href="" class="topbar">Contact Me</a>
+            <a href="" class="topbar">Experiences</a>
         </nav>
         <div class="detel">
             <h1>I'm Saahil <span>Sharma</span></h1>
