--- a/index.html
+++ b/index.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saahil Sharma - Software Engineer</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <div class="hero">
-        <nav>
-            <img src="images/logo.png" class="logo">
-            <a href="" class="topbar">About</a>
-            <a href="" class="topbar">Contact Me</a>
-            <a href="" class="topbar">Experiences</a>
-        </nav>
-        <div class="detel">
-            <h1>I'm Saahil <span>Sharma</span></h1>
-            <h4>Incoming Software Engineer @ <span>HSBC Technology</span></h4>
-            <p>To obtain a challenging and rewarding Software
-                Engineer position where a degree <br> in computer
-                engineering and an Internship as a programmer will
-                be fully utilized. <br> I have a good ability to clearly
-                communicate complex and technical information. I <br>
-                am gaining proficiency in JAVA and Full Stack Developement. </p>
-            <a href="https://drive.google.com/file/d/1fQzOfK_Rl7BDBhdCnrvldrRsGNInzzfz/view?usp=sharing">Downdload CV</a>
-        </div>
-        <div class="images">
-            <img src="images/shape.png" class="shape">
-            <img src="images/boy.png" class="boy">
-        </div>
+      <nav>
+        <img src="images/logo.png" class="logo" />
+        <a href="" class="topbar">About</a>
+        <a href="" class="topbar">Contact Me</a>
+        <a href="" class="topbar" T>Experiences</a>
+      </nav>
+      <div class="detel">
+        <h1>I'm Saahil <span>Sharma</span></h1>
+        <h4>Incoming Software Engineer @ <span>HSBC Technology</span></h4>
+        <p>
+          To obtain a challenging and rewarding Software Engineer position where
+          a degree <br />
+          in computer engineering and an Internship as a programmer will be
+          fully utilized. <br />
+          I have a good ability to clearly communicate complex and technical
+          information. I <br />
+          am gaining proficiency in JAVA and Full Stack Developement.
+        </p>
+        <a
+          href="https://drive.google.com/file/d/1fQzOfK_Rl7BDBhdCnrvldrRsGNInzzfz/view?usp=sharing"
+          >Downdload CV</a
+        >
+      </div>
+      <div class="images">
+        <img src="images/shape.png" class="shape" />
+        <img src="images/boy.png" class="boy" />
+      </div>
 
-        <div class="social">
-           <a href="https://www.hackerrank.com/saahil_sharma201"><i class="fab fa-hackerrank"></i></a>
-           <a href="https://www.instagram.com/_sawhill/"><i class="fab fa-instagram"></i></a>
-           <a href="https://github.com/bloodkalsura"><i class="fab fa-github"></i></a>
-        </div>
+      <div class="social">
+        <a href="https://www.hackerrank.com/saahil_sharma201"
+          ><i class="fab fa-hackerrank"></i
+        ></a>
+        <a href="https://www.instagram.com/_sawhill/"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://github.com/bloodkalsura"
+          ><i class="fab fa-github"></i
+        ></a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
